--- a/react-project/package.json
+++ b/react-project/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "antd": "^5.18.1",
     "axios": "^1.7.2",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
